@@ -1,5 +1,5 @@
 .\"
-.\" "$Id: cupsd.conf.man,v 1.11 2003/04/16 19:03:37 mike Exp $"
+.\" "$Id: cupsd.conf.man,v 1.12 2004/07/02 04:44:20 mike Exp $"
 .\"
 .\"   cupsd.conf man page for the Common UNIX Printing System (CUPS).
 .\"
@@ -21,7 +21,7 @@
 .\"       EMail: cups-info@cups.org
 .\"         WWW: http://www.cups.org
 .\"
-.TH cupsd.conf 5 "Common UNIX Printing System" "12 August 2002" "Easy Software Products"
+.TH cupsd.conf 5 "Common UNIX Printing System" "1 July 2004" "Easy Software Products"
 .SH NAME
 cupsd.conf \- server configuration file for cups
 .SH DESCRIPTION
@@ -367,6 +367,11 @@ ServerRoot
 .br
 Specifies the directory where the server configuration files can be found.
 .TP 5
+ServerTokens
+.br
+Specifies what information is included in the Server header of HTTP
+responses.
+.TP 5
 SSLListen
 .br
 Listens on the specified address and port for encrypted connections.
@@ -397,5 +402,5 @@ http://localhost:631/documentation.html
 .SH COPYRIGHT
 Copyright 1993-2003 by Easy Software Products, All Rights Reserved.
 .\"
-.\" End of "$Id: cupsd.conf.man,v 1.11 2003/04/16 19:03:37 mike Exp $".
+.\" End of "$Id: cupsd.conf.man,v 1.12 2004/07/02 04:44:20 mike Exp $".
 .\"
