@@ -1,5 +1,5 @@
 /*
- * "$Id: conf.c,v 1.147 2004/06/29 03:27:35 mike Exp $"
+ * "$Id: conf.c,v 1.148 2004/07/02 04:44:20 mike Exp $"
  *
  *   Configuration routines for the Common UNIX Printing System (CUPS).
  *
@@ -23,7 +23,7 @@
  *
  * Contents:
  *
- *   ReadConfiguration()  - Read the cupsd.conf file.
+ *    - Read the cupsd.conf file.
  *   read_configuration() - Read a configuration file.
  *   read_location()      - Read a <Location path> definition.
  *   get_address()        - Get an address + port number from a line.
@@ -39,6 +39,7 @@
 #include <stdarg.h>
 #include <pwd.h>
 #include <grp.h>
+#include <sys/utsname.h>
 
 #ifdef HAVE_CDSASSL
 #  include <Security/SecureTransport.h>
@@ -251,6 +252,7 @@ ReadConfiguration(void)
   SetString(&PrintcapGUI, "/usr/bin/glpoptions");
   SetString(&FontPath, CUPS_FONTPATH);
   SetString(&RemoteRoot, "remroot");
+  SetString(&ServerHeader, "CUPS/1.1");
 
   strlcpy(temp, ConfigurationFile, sizeof(temp));
   if ((slash = strrchr(temp, '/')) != NULL)
@@ -837,7 +839,7 @@ read_configuration(cups_file_t *fp)	/* I - File to read from */
       }
       else
       {
-        LogMessage(L_ERROR, "ReadConfiguration() Syntax error on line %d.",
+        LogMessage(L_ERROR, "Syntax error on line %d.",
 	           linenum);
         return (0);
       }
@@ -1386,7 +1388,7 @@ read_configuration(cups_file_t *fp)	/* I - File to read from */
 	if (p != NULL)
 	  User = p->pw_uid;
 	else
-	  LogMessage(L_WARN, "ReadConfiguration() Unknown username \"%s\"",
+	  LogMessage(L_WARN, "Unknown username \"%s\"",
 	             value);
       }
     }
@@ -1408,7 +1410,7 @@ read_configuration(cups_file_t *fp)	/* I - File to read from */
 	if (g != NULL)
 	  Group = g->gr_gid;
 	else
-	  LogMessage(L_WARN, "ReadConfiguration() Unknown groupname \"%s\"",
+	  LogMessage(L_WARN, "Unknown groupname \"%s\"",
 	             value);
       }
     }
@@ -1474,7 +1476,7 @@ read_configuration(cups_file_t *fp)	/* I - File to read from */
       else if (strcasecmp(value, "double") == 0)
         HostNameLookups = 2;
       else
-	LogMessage(L_WARN, "ReadConfiguration() Unknown HostNameLookups %s on line %d.",
+	LogMessage(L_WARN, "Unknown HostNameLookups %s on line %d.",
 	           value, linenum);
     }
     else if (strcasecmp(name, "LogLevel") == 0)
@@ -1517,8 +1519,36 @@ read_configuration(cups_file_t *fp)	/* I - File to read from */
       else if (strcasecmp(value, "solaris") == 0)
         PrintcapFormat = PRINTCAP_SOLARIS;
       else
-	LogMessage(L_WARN, "ReadConfiguration() Unknown PrintcapFormat %s on line %d.",
+	LogMessage(L_WARN, "Unknown PrintcapFormat %s on line %d.",
 	           value, linenum);
+    }
+    else if (!strcasecmp(name, "ServerTokens"))
+    {
+     /*
+      * Set the string used for the Server header...
+      */
+
+      struct utsname plat;		/* Platform info */
+
+
+      uname(&plat);
+
+      if (!strcasecmp(value, "ProductOnly"))
+        SetString(&ServerHeader, "CUPS");
+      else if (!strcasecmp(value, "Major"))
+        SetString(&ServerHeader, "CUPS/1");
+      else if (!strcasecmp(value, "Minor"))
+        SetString(&ServerHeader, "CUPS/1.1");
+      else if (!strcasecmp(value, "Minimal"))
+        SetString(&ServerHeader, CUPS_MINIMAL);
+      else if (!strcasecmp(value, "OS"))
+        SetStringf(&ServerHeader, CUPS_MINIMAL " (%s)", plat.sysname);
+      else if (!strcasecmp(value, "Full"))
+        SetStringf(&ServerHeader, CUPS_MINIMAL " (%s) IPP/1.1", plat.sysname);
+      else if (!strcasecmp(value, "None"))
+        ClearString(&ServerHeader);
+      else
+        LogMessage(L_WARN, "Unknown ServerTokens %s on line %d.", value, linenum);
     }
     else
     {
@@ -2196,5 +2226,5 @@ CDSAGetServerCerts(void)
 
 
 /*
- * End of "$Id: conf.c,v 1.147 2004/06/29 03:27:35 mike Exp $".
+ * End of "$Id: conf.c,v 1.148 2004/07/02 04:44:20 mike Exp $".
  */
