@@ -3,6 +3,8 @@ CHANGES.txt - 07/01/2004
 
 CHANGES IN CUPS V1.1.21rc2
 
+	- Added ServerTokens directive to control the Server
+	  header in HTTP responses (STR #792)
 	- Added new httpDecode64_2(), httpEncode64_2(), and
 	  httpSeparate2() functions which offer buffer size
 	  arguments (STR #797)
